build/testuserdir/var/cache/index/s1/errors/1/vendor/phpunit/phpunit-mock-objects/tests/Generator/397.phpt.warn
WARNING:7:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	variable '$other'
WARNING:7:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	)
WARNING:8:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	{
WARNING:10:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	}
WARNING:25:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	--
WARNING:26:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	class
WARNING:37:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	?
WARNING:37:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	variable '$other'
WARNING:37:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	)
WARNING:38:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	{
WARNING:59:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	public
WARNING:64:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	public
WARNING:71:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	public
WARNING:76:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	public
WARNING:85:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	public
WARNING:90:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	public
WARNING:99:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	End of File
